# MySLAM

./: CMakeLists.txt  README.md
app/: run_kitti_stereo.cpp
include/myslam/: backend.h  common_include.h  config.h  frame.h  frontend.h  g2o_types.h  keyframeDatabase.h  loop_closure.h  map.h  visual_odometry.h
src/: CMakeLists.txt  backend.cpp  frontend.cpp  keyframeDatabase.cpp  loop_closure.cpp  map.cpp  viewer.cpp  visual_odometry.cpp
